--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!--  Created by Marius Vinickis on 01/07/2019.
+      Copyright © 2019 Marius Vinickis. All rights reserved. -->
+
 <!DOCTYPE html>
 <html>
 <head>
